Fix : Scroll issues for data assets widgets  and Explore page horizontal scroll  (#20854)
* fix scroll issues for data assets widgets on persona page

* fix total data assets overflow issue

* fix horizontal scroll issue on explore page

--- a/openmetadata-ui/src/main/resources/ui/src/components/MyData/Widgets/DataAssetsWidget/data-assets-widget.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/MyData/Widgets/DataAssetsWidget/data-assets-widget.less
@@ -13,6 +13,10 @@
 @import (reference) url('../../../../styles/variables.less');
 
 .data-assets-explore-widget-container {
+  .ant-card-body {
+    overflow-y: hidden !important;
+    max-height: none !important;
+  }
   .data-assets-explore-widget-body {
     height: 265px;
     overflow-x: hidden;
@@ -37,7 +41,8 @@
         flex-direction: column;
         text-align: center;
         align-items: center;
-        padding: 20px 0;
+        padding: 10px 0;
+        max-height: 100%;
 
         .data-asset-badge {
           width: max-content;
