--- a/openmetadata-ui/src/main/resources/ui/src/components/MyData/Widgets/TotalDataAssetsWidget/total-data-assets-widget.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/MyData/Widgets/TotalDataAssetsWidget/total-data-assets-widget.less
@@ -23,6 +23,8 @@
 
   .total-entity-insight-summary-container {
     scrollbar-width: none;
+    height: 100%;
+    overflow-y: auto;
 
     &::-webkit-scrollbar {
       display: none;
